packages/header/header.pcss
@import url("@sikt/sds-tokens/dist/css/custom-media.css");

.sds-header {
  align-items: center;
  background-color: var(--sds-color-layout-background-primary);
  display: flex;
  justify-content: space-between;
  min-height: 48px;
  padding: 0 var(--sds-space-padding-huge);

  &__skip-link:focus-within {
    position: absolute;
  }

  .sds-header__logo {
    font-size: var(--sds-base-size-relative-m);

    &-link {
      background-color: unset;
      color: inherit;
      text-decoration: none;
    }
  }

  @media (--sds-base-breakpoint-tablet) {
    min-height: 56px;
  }

  @media (--sds-base-breakpoint-desktop) {
    min-height: 72px;
  }
}

